# simple-gan

./: README.md  main.py  makefile  pyproject.toml  setuppython.sh
utils/: data.py  gan.py  model.py  train.py
