[tool.poetry]
name = "simple-gan"
version = "0.1.0"
description = ""
authors = ["Nonaka Kenya <k.nonaka@opt.ne.jp>"]

[tool.poetry.dependencies]
python = "=3.9.7"
matplotlib = "^3.5.1"
numpy = "^1.21.5"
pandas = "^1.3.5"
tqdm = "^4.62.3"
torch = "^1.10.1"
torchvision = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
